# StereoSTD

./: README.md
examples/: CMakeLists.txt  Capture_Save.cpp  DisplayRGB.cpp  DisplayToF.cpp  Distance.cpp  Hello-StereoSTD.cpp  PointCloud_PCD_PLY.cpp  PostProcessing.cpp  STD-AutoDepth.cpp  STD_align.cpp  STD_depth.cpp  STD_pointcloud.cpp  STD_raw.cpp  STD_rgb.cpp  Spatial_Alignment.cpp  Spatial_Alignment3D.cpp  StreamRecording.cpp  align.cpp  depth.cpp  render.h  rgb.cpp
examples/doc/: 3DSpatialAlignment.md  Capture&Save.md  DisplayRGB.md  DisplayToF.md  Distance.md  Hello_StereoSTD.md  PointCloud.md  Post_Processing.md  STD-RGB.md  STD-align.md  STD-distance.md  STD-pointcloud.md  Spatial_Alignment.md  Stream_Recording.md
include/: macros.h  version.h
include/common/: calib_convert.h
include/libsynexens3/: config.h  context.h  device-info.h  device.h  frame.h  libsynexens3.h  option.h  pipeline.h  process-engine.h  sensor.h  types.h
include/platform/: platform-interface.h  uvc-xu-def.h
include/platform/base/: uvc-base-camera.h
lib/x64/: libsynexens3.lib
